--- a/html/login.html
+++ b/html/login.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8"> 
         <title>Authorization</title> 
         <script src="../js/login.js" defer></script>
+        <noscript>
+            <meta http-equiv="refresh" content="0; url=noscript">
+        </noscript>
         <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
