--- a/html/signup.html
+++ b/html/signup.html
@@ -5,6 +5,9 @@
         <title>Rigistration</title> 
         <script src="../js/signup.js" defer></script>
         <link rel="stylesheet" href="../css/style.css">
+        <noscript>
+            <meta http-equiv="refresh" content="0; url=noscript">
+        </noscript>
     </head>
     <body>
         <form name="signup_form">
@@ -15,7 +18,7 @@
             <label>Confirm Password <span id="password_confirm_msg"></span></label>
             <input name="password_confirm" type="password" name="password_confirm" value="">
             <label>Email <span id="email_msg"></span></label>
-            <input name="email" type="email" name="email" value="">
+            <input name="email" type="text" name="email" value="">
             <label>Name <span id="name_msg"></span></label>
             <input name="name" type="text" name="name" value="">
             <button id="create_account">Create Account</button>
